--- a/Practica 2/Ejercitacion6.html
+++ b/Practica 2/Ejercitacion6.html
@@ -107,7 +107,7 @@
             </LI> 
         </UL> 
     </DIV> 
-    <DIV id=pie>Ingenieri­a en Sistemas de Informacion - Universidad Tecnologica Nacional Rosario</DIV> 
+    <DIV id=pie>Ingenieria en Sistemas de Informacion - Universidad Tecnologica Nacional Rosario</DIV> 
     <p>&nbsp;</p> 
 </BODY> 
 </HTML>
